# mon-explorer

./: .env  .flake8  .gitignore  manage.py  pyproject.toml  pyproject.toml.old
authtest/: auth.py
bkp/: admin.py  apps.py  functions.py  models.py
bkp/migrations/: 0001_initial.py  0002_auto_20211102_1348.py
bkp/templates/admin/: mount_points_update_list.html
explorer/: admin.py  functions.py  import_customers.py  models.py
explorer/management/commands/: contragent_import.py  customer_import.py
explorer/templates/admin/: contragent_update_list.html  customer_update_list.html  thrukhost_update_list.html
mcs/: asgi.py  settings.py  urls.py  wsgi.py
mcs/authtest/: auth.py  urls.py  views.py
mcs/authtest/templates/: host.html  hosts_paginator.html
mcs/explorer/: models.py
mcs/explorer/migrations/: 0001_initial.py
mcs/explorer/templates/admin/: thrukhost_update_list.html
mcs/mcs/: configuration.example.py  cron.py  settings.py  urls.py
mcs/refs/: admin.py  auth.py  models.py  rest_truck.py
mcs/refs/templates/admin/: backup_update_list.html
mcs/templates/: login.html
refs/: admin.py  apps.py  models.py
refs/migrations/: 0001_initial.py
