[tool.poetry]
name = "mcs"
version = "0.1.0"
description = ""
authors = ["Sergey Zhiltsov <szhiltsov@dtln.local>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.7"
psycopg2-binary = "^2.9.1"
SQLAlchemy = "^1.4.23"
pyodbc = "^4.0.32"
pandas = "^1.3.2"
requests = "^2.26.0"
urllib3 = "^1.26.6"
django-grappelli = "^2.15.1"
django-debug-toolbar = "^3.2.2"
python-decouple = "^3.4"
mozilla-django-oidc = "^2.0.0"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mccabe = "^0.6.1"
flake8 = "^3.9.2"
black = "^21.8b0"
flake8-builtins = "^1.5.3"
flake8-bugbear = "^21.4.3"
pep8-naming = "^0.12.1"
flake8-variables-names = "^0.0.4"
flake8-django = "^1.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

